--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "author": "Petter Sjunnestrand",
   "license": "ISC",
   "dependencies": {
+    "@ant-design/icons": "^5.0.1",
     "@types/node": "^18.13.0",
     "express": "^4.18.2",
     "nodemon": "^2.0.20",
